<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hail_caesar_message">Hail Caesar Message</string>
    <string name="hail_caesar_subject">Secure Message</string>
    <string name="hail_caesar_disclaimer">This message is confidential. It may also be privileged or otherwise protected by work product immunity or other legal rules. If you have received it by mistake, please let us know by reply and delete it from your system; you may not copy this message or disclose its contents to anyone.</string>
    <string name="app_name">Hail Caesar</string>
    <string name="site_url">www.randomsilo.com</string>
    <string name="logo_description">Hail Caesar Coin Logo</string>
    <string name="empty_text">empty</string>
    <string name="empty_name">Name</string>
    <string name="empty_uuid">uuid</string>
    <string name="empty_wards">00 01 02 03 04 05 06 07 08 09</string>
    <string name="action_access_safe">Set Safe Password</string>
    <string name="action_access_distress">Set Distress Password</string>
    <string name="button_message">Navigate to Messages</string>
    <string name="button_identity">Navigate to Passwords</string>
    <string name="button_lock">Navigate to Locks</string>
    <string name="button_key">Navigate to Keys</string>
    <string name="button_login">Authenticate</string>
    <string name="button_save">Save</string>
    <string name="button_export">Export</string>
    <string name="button_randomize_wards">Randomize</string>
    <string name="button_remove">Remove</string>
    <string name="button_send_message">Send</string>
    <string name="button_clear_message">Clear</string>
    <string name="button_decrypt_message">Decrypt</string>
    <string name="button_reply_message">Reply</string>
    <string name="button_reset_message">Reset</string>
    <string name="action_lock_new">Add</string>
    <string name="action_key_new">Add</string>
    <string name="action_message_new">Add</string>
    <string name="action_attachment_new">Add</string>
    <string name="action_home">Home</string>
    <string name="action_save">Save</string>
    <string name="title_activity_lock_list">Locks</string>
    <string name="title_activity_lock_edit">Edit Lock</string>
    <string name="title_activity_key_list">Keys</string>
    <string name="title_activity_key_edit">Edit Key</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_send_message">Send Message</string>
    <string name="title_activity_get_message">Get Message</string>
    <string name="title_activity_identity">Passwords</string>
    <string name="label_lock_name">Lock</string>
    <string name="label_lock_uuid">Unique ID</string>
    <string name="label_key_name">Key</string>
    <string name="label_key_wards">Wards</string>
    <string name="label_key_uuid">Unique ID</string>
    <string name="label_password">Password</string>
    <string name="label_message">Message</string>
    <string name="label_instructions">Login</string>
    <string name="label_safe_password">Safe Password</string>
    <string name="label_distress_password">Distress Password</string>
    <string name="instructions_login">Enter your password and press authenticate. A safe password will allow app access. A distress password will wipe out all data.</string>
    <string name="image_lock">Lock</string>
    <string name="image_key">Key</string>
    <string name="dialog_login_title">Login Required</string>
    <string name="dialog_login_message">Enter your password and press authenticate. A safe password will allow app access. A distress password will wipe out all data.</string>
    <string name="dialog_login_button_authorize">Authorize</string>
    <string name="dialog_login_button_exit">Exit</string>
    <string name="dialog_eula_title">End User License Agreement</string>
    <string name="dialog_eula_message_start">The following statements must be true for you to legally use the "Hail Caesar" application.</string>
    <string name="dialog_eula_message_part1">1. You are a US Citizen</string>
    <string name="dialog_eula_message_part2">2. You are a legal adult</string>
    <string name="dialog_eula_message_part3">3. You are not doing anything illegal</string>
    <string name="dialog_eula_message_part4">4. You understand that ALL encryption can be defeated</string>
    <string name="dialog_eula_message_part5">5. This application has no warranty and accepts no liability</string>
    <string name="dialog_eula_message_part6">6. Any legal issues shall be governed by the State of Nebraska</string>
    <string name="dialog_eula_message_end">If you are unable/unwilling to accept these conditions please request a refund and uninstall the application.</string>
    <string name="dialog_eula_message_thankyou">Thank you for purchasing this application.\n\nSincerely,\nDan Dawson</string>
    <string name="dialog_eula_button_authorize">Accept</string>
    <string name="dialog_eula_button_exit">Exit</string>
    <string name="message_decrypt_error">Lock/Key combination is incorrect</string>
    <string name="message_open_error">Message could not be opened</string>
    <string name="dialog_file_save_title">Save Message</string>
    <string name="dialog_file_save_message">Enter a file name for the message</string>
    <string name="dialog_file_save_button_save">Save</string>
    <string name="dialog_file_save_button_exit">Exit</string>
    <string name="dialog_file_save_button_format_name">Format File Name</string>
    
</resources>
