<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
	        android:id="@+id/key_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/empty_name"
	        android:textSize="@dimen/list_text_size"
	        android:textColor="@color/theme_dark" >
	    </TextView>
	    <TextView
	        android:id="@+id/key_wards"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/key_name"
	        android:text="@string/empty_wards"
	        android:textSize="@dimen/label_text_size"
	        android:textColor="@color/common_text" >
	    </TextView>
	    <TextView
	        android:id="@+id/key_uuid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/key_wards"
	        android:text="@string/empty_uuid"
	        android:textSize="@dimen/label_text_size"
	        android:textColor="@color/common_text" >
	    </TextView>
</RelativeLayout> 
