<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context="${relativePackage}.${activityClass}" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/outer_margin"
        android:background="@color/layout_background"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding" >
        
        <TextView
            android:id="@+id/LockNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_top_margin"
            android:labelFor="@+id/LockName"
            android:text="@string/label_lock_name"
            android:textSize="@dimen/label_text_size"
        	android:textColor="@color/theme_dark" />

        <EditText
            android:id="@+id/LockName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/common_text"
            android:textSize="@dimen/field_text_size" >

            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/LockUuidLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_top_margin"
            android:labelFor="@+id/LockUuid"
            android:text="@string/label_lock_uuid"
            android:textSize="@dimen/label_text_size"
        	android:textColor="@color/theme_dark" />
        
        <TextView
            android:id="@+id/LockUuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_top_margin"
            android:labelFor="@+id/LockUuid"
            android:text="@string/empty_text"
            android:textSize="@dimen/field_text_size"
        	android:textColor="@color/common_text" />

        <LinearLayout
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/SaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="save"
                android:text="@string/button_save"
                android:textColor="@color/theme_main"
                android:textSize="@dimen/field_text_size"
                tools:ignore="ButtonStyle" />
            
            <Button
                android:id="@+id/ExportBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="export"
                android:text="@string/button_export"
                android:textColor="@color/theme_main"
                android:textSize="@dimen/field_text_size"
                tools:ignore="ButtonStyle" />
            
            <Button
                android:id="@+id/RemoveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="remove"
                android:text="@string/button_remove"
                android:textColor="@color/theme_main"
                android:textSize="@dimen/field_text_size"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        

    </LinearLayout>

</RelativeLayout>
