<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context="${relativePackage}.${activityClass}" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/outer_margin"
        android:background="@color/layout_background"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding" >
        
        <TextView
            android:id="@+id/SafePasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_top_margin"
            android:labelFor="@+id/SafePassword"
            android:text="@string/label_safe_password"
            android:textSize="@dimen/label_text_size"
        	android:textColor="@color/theme_dark" />

        <EditText
            android:id="@+id/SafePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/common_text"
            android:textSize="@dimen/field_text_size"
            tools:ignore="TextFields" >

            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/DistressPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_top_margin"
            android:labelFor="@+id/DistressPassword"
            android:text="@string/label_distress_password"
            android:textSize="@dimen/label_text_size"
        	android:textColor="@color/theme_dark" />

        <EditText
            android:id="@+id/DistressPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/common_text"
            android:textSize="@dimen/field_text_size"
            tools:ignore="TextFields" >

        </EditText>

        <LinearLayout
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:orientation="horizontal" >
            
            <Button
                android:id="@+id/SaveBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="save"
                android:text="@string/button_save"
                android:textColor="@color/theme_main"
                android:textSize="@dimen/field_text_size"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
